calmat_ng/static/css/style.css
/*------------------------------------------------------------------------------
    :: Helpful stuffs
------------------------------------------------------------------------------*/

/*
    Colors

    orange: #f17521
    gray:   #211f1f
    blue    #0eb8c8
*/

/*------------------------------------------------------------------------------
    :: General Styles
------------------------------------------------------------------------------*/

h1, h2, h3, h4, h5, h6 {
    font-weight: normal;
}

body {
    font-family: "Neusa", sans-serif;
    font-size: 18px;
    line-height: 1.45em;
    color: #211f1f;
    background: #fff;
    -webkit-text-size-adjust: none;
    -webkit-font-smoothing: antialiased;
}

input, textarea, select, button {
    outline: none;
    font-family: "Neusa", sans-serif;
}

a {
    text-decoration: none;
    color: #00acee;
}
a.link_dark {
    color:#231f20;
}

a:hover {
    text-decoration: none;
    -o-transition:color .3s ease-in, background .3s ease-in;
    -ms-transition:color .3s ease-in, background .3s ease-in;
    -moz-transition:color .3s ease-in, background .3s ease-in;
    -webkit-transition:color .3s ease-in, background .3s ease-in;
    transition:color .3s ease-in, background .3s ease-in;
}
a.link_dark:hover {
    color: #f47522;
}

blockquote {
    margin: 0;
    padding: 0;
    border: 0;
    border-bottom: 2px solid #f79759;
    border-top: 2px solid #f79759;
    margin-bottom: 40px;
    font-size: 16px;
    line-height: 24px;
    color: #595a5c;
    padding: 7px 0;
    font-family: "ff-meta-serif-web-pro";
}

iframe {
    border: 0;
}

.mobile-only {
    display: none;
}

.quote {
    font-size: 18px;
    line-height: 28px;
    padding-bottom: 40px;
    font-weight: bold;
    font-family: "ff-meta-serif-web-pro";
}

.quote p {
    margin: 0;
}

.hided-s {
    overflow: hidden;
}

.popular-wi {
    padding-top: 48px;
}

select.hided-s {
    display: block !important;
    position: absolute;
    top: -999em;
    left: -999em;
    font-size: 0;
    border: 0;
    background: none;
    -webkit-appearance: none;
}

.crf-sm {
    position: absolute;
    min-width: 150px;
    margin-top: -1px;
    display: none;
    overflow: auto;
    max-height: 300px;
    z-index: 9999;
    border: 1px solid #434041;
    background-color: #fff;
}

.crf-sm ul {
    margin: 0;
    padding: 0;
}

.crf-sm li {
    cursor: pointer;
    margin: 0;
    color: #000;
    padding: 5px 15px;
    font-size: 18px;
    font-family: "ff-meta-serif-web-pro";
}

a.underline {
    color: #221f1f;
    border-bottom: 4px solid #0eb8c8;
    font-family: "ff-meta-serif-web-pro";
}

a.underline:hover,
a.underline:focus {
    background: #01b6c8;
    border-bottom-color: transparent;
    box-shadow: -3px 0 #01b6c8, 3px 0 #0eb8c8;
}

.btn-orange {
    border-radius: 0;
    text-transform: uppercase;
    background-color: #f47521;
    font-weight: 500;
    color: white;
    font-family: "Neusa";
    border: 0;
    padding: 0.3em 0.45em;
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.btn-black {
    border-radius: 0;
    font-weight: 500;
    color: #fff;
    font-family: "Neusa";
    font-size: 16px;
    background: #231f20;
    border: 0;
    padding: 0 13px;
    height: 37px;
}
.btn-black:hover,
.btn-black:focus {
    color: white;
    background: #f47521;
}

.ffmeta {
    font-family: "ff-meta-serif-web-pro", serif;
}

@media screen and (max-width: 1230px){
    blockquote {
        margin-bottom: 22px;
    }
    img {
        max-width: 100%;
        height: auto;
    }
}

@media screen and (max-width: 990px){
    .desktop-only {
        display: none;
    }
}
@media screen and (max-width: 767px){
    .mobile-only {
        display: block;
    }
}

.partner_logo_in_content {
    /*
        opacity: 0.4;
    */
    height: 20px;
    margin: 0px 10px 10px 0px;
}
.partner_logo_in_content:hover {
    opacity: 1;
    -o-transition:opacity .3s ease-in;
    -ms-transition:opacity .3s ease-in;
    -moz-transition:opacity .3s ease-in;
    -webkit-transition:opacity .3s ease-in;
    transition:opacity .3s ease-in;
}

/*------------------------------------------------------------------------------
    :: TinyMCE styles for frontend -- editor styles in theme/static/tinymce/css/custom_editor_styles.css
------------------------------------------------------------------------------*/

.cm_largest { font-size: 42px;}
.cm_large { font-size: 32px;}
.cm_small { font-size: 13px;}

p.cm_largest {
    font-size: 56px;
    line-height: 1em;
}
p.cm_large {
    font-size: 32px;
    line-height: 1em;
}
p.cm_small {
    font-size: 13px;
    line-height: 1.7em;
}

.cm_orange { color: #f17521;}
.cm_green { color: #7cc143;}
.cm_blue { color: #0eb8c8;}
.cm_gray { color: #211f1f;}

/*------------------------------------------------------------------------------
    :: Containers
------------------------------------------------------------------------------*/

body {
    padding-top: 100px;
}

body.active-left {
    overflow: hidden;
}

body.active-left > .mask {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.7);
    z-index: 1000;
}

.container {
    position: relative;
    width: 1198px;
    padding: 0;
    margin: 0 auto;
}

@media screen and (max-width: 1230px) {
    .container {
        margin: 0 44px;
        width: auto;
    }
}

@media screen and (max-width: 1200px){
    .container {
        margin: 0 26px;
    }
}

@media screen and (max-width: 767px){
    body {
        padding-top: 54px
    }
/*    .container {
        margin: 0;
    }
*/    #body > .container {
        margin: 25px;
    }

    div#body {
        padding-top: 0;
    }
}
/* ... */

